# Eris

./: .gitignore  README.md  lessons_learned.md  platformio.ini
Firmware/: fsr.cpp  sdcard.cpp  (+5 more)
drivers/python/: README.md  pyproject.toml  requirements.txt
drivers/python/Examples/: BandwidthTest.ipynb  BandwidthTest2.ipynb  SineWave.py  SineWaveROS.py
drivers/python/Examples/.ipynb_checkpoints/: ROStest-checkpoint.ipynb
drivers/python/eris/: __init__.py  eris.py
drivers/python/featureextraction/: subscriber.py
drivers/python/featureextraction/examples/: example.yaml  example1.yaml  testSubscriber.py
drivers/python/flavors/ErisTapok2/: testMatlab.py
drivers/python/ros_ws/logs/eris_emg/: build.cmake.000.log.stderr
drivers/python/ros_ws/logs/eris_fsr/: build.cmake.000.log.stderr
drivers/python/ros_ws/logs/eris_imu/: build.cmake.000.log.stderr
drivers/python/ros_ws/logs/recorder/: build.cmake.000.log.stderr
drivers/python/ros_ws/scripts/: protocol.sh  runremote.launch
drivers/python/ros_ws/src/custom_msgs/: CMakeLists.txt  README.txt
drivers/python/ros_ws/src/eris_emg/: package.xml~
drivers/python/ros_ws/src/eris_generic/: package.xml
drivers/python/ros_ws/src/eris_leg/: CMakeLists.txt  package.xml
drivers/python/ros_ws/src/features/: package.xml
drivers/python/ros_ws/src/ml/: CMakeLists.txt  package.xml
drivers/python/ros_ws/src/old/: CMakeLists.txt  package.xml
drivers/python/ros_ws/src/tests/: CMakeLists.txt  package.xml
drivers/python/ros_ws/www/: imu.html  index.html  sample.html
drivers/python/roshandlers/: recorder.py
(+932 files in other folders)
